2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amfetchdump.pl: use Amanda::Fetchdump subclass
	* perl/Amanda/FetchDump.pm: Generic class
	* perl/Amanda/FetchDump/Application.pm,
	  perl/Amanda/FetchDump/ClientApplication.pm,
	  perl/Amanda/FetchDump/Local.pm: Specific module for different
	  destination, use Amanda::Restore

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/restore.pl: New client service to restore on the client
	* client-src/Makefile.am: add restore.pl
	* perl/Amanda/Service/Restore.pm: Core of service, use Amanda::Restore
	* perl/Makefile.am: Add Amanda/Service/Restore.pm

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/CheckDump.pm: Use Amanda::Restore module
	* server-src/amcheckdump.pl: Use Amanda::CheckDump

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* xfer-src/dest-fd.c, xfer-src/filter-crc.c,
	  xfer-src/filter-process.c, xfer-src/source-fd.c,
	  xfer-src/xfer-element.h: Small fix

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Service/Amidxtaped.pm: New amidxtaped perl module, it
	  use Amanda::Restore
	* server-src/amidxtaped.pl: Use Amanda::Service::Amidxtaped
	* recover-src/amrecover.c, recover-src/extract_list.c: improve
	  amrecover-amidxtaped protocol

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Restore.pm: New module to to do a recovery, all program
	  will use it.
	* perl/Makefile.am: Add Amanda/Restore.pm

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Amservice.pm: New perl module to execute amservive
	* perl/Makefile.am: Add Amanda/Amservice.pm

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amservice.c: Add --stream and --config option, use
	  security_stream_write_async

2015-11-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/bsd-security.c, common-src/bsdtcp-security.c,
	  common-src/bsdudp-security.c, common-src/krb5-security.c,